[package]
name = "svm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "svm"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
    "wormhole-anchor-sdk/mainnet"
]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
wormhole-anchor-sdk = { version = "0.30.1-alpha.3", default-features = false, features = [
    "token-bridge",
]}
