[package]
name = "token_bridge_relayer"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_bridge_relayer"

[features]
default = ["mainnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
localnet = ["wormhole-anchor-sdk/tilt-devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "wormhole-anchor-sdk/idl-build",
]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
wormhole-anchor-sdk = { version = "0.30.1-alpha.3", default-features = false, features = [
    "token-bridge",
]}
wormhole-raw-vaas = "0.3.0"
